--- a/index.html
+++ b/index.html
@@ -2,9 +2,60 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <h1>「Webコンテンツ作成」の成果</h1>
   </head>
   <body>
-    <p>This is my page</p>
+    <h2>本学習の目的</h2>
+
+    <p>ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。</p>
+    <h2>プロジェクト課題について</h2>
+
+    <p>プロジェクト課題では...を実施する。ここで表示するデータは...</p>
+
+    <p>プロジェクト課題で作成したページ：</p><a href="project.html"></a>
+
+    <h2>毎回の講義で作成したページ</h2>
+
+    <h3>第1回HTMLによるWebページの構造の記述</h3>
+
+    <p>今回は次の....について学びました。また次の課題に取り組みました。</p>
+
+    <h4>練習1-4:リスト</h4>
+
+    <p>テキストだけで記述されたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構成を記述しました。ここで使用したのはp要素,hi要素,ul要素,olなどです。</p>
+
+    <p>編集したファイル:</p><a href="practice/text.start.html"></a>
+
+    <h4>練習1-5:ナビゲーションメニューの作成</h4>
+
+    <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
+
+    <p>編集したファイル:</p><a href="practice.index.html"></a>
+
+    <h4>課題1-2:debug-example.htmlの修正</h4>
+
+    <p>practice/debug-example.htmlを修正しました。また、HTMLバリデータなどを使用して、HTMLが整形式になったことを確認しました。</p>
+
+    <p>修正したファイル</p><a href="practice/debug-example.html"></a>
+
+    <h4>課題1-3:index.htmlの作成</h4>
+
+    <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
+
+    <h4>課題1-4:...</h4>
+
+    <p>...</p>
+
+    <h2>第2回CSSによるWebページの装飾</h2>
+
+    <h2>第3回JavaScriptの基本</h2>
+
+    <h2>第4回フォームとイベント処理</h2>
+
+    <h2>第5回Webページの動作な編集</h2>
+
+    <h2>第6回Webページの作成演習</h2>
+
+
   </body>
 </html>
