--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <p>テキストだけで記述されたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構成を記述しました。ここで使用したのはp要素,hi要素,ul要素,olなどです。</p>
 
-    <p>編集したファイル:</p><a href="practice/text.start.html"></a>
+    <p>編集したファイル:</p><a href="file:///Z:/medialabo/practice/text-start.html"
+       target="_blank"> practice/text.start.html></a>
 
     <h4>練習1-5:ナビゲーションメニューの作成</h4>
 
