6月16日に課題

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <h1>「Webコンテンツ作成」の成果</h1>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>本学習の目的</h2>
