--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <p>テキストだけで記述されたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構成を記述しました。ここで使用したのはp要素,hi要素,ul要素,olなどです。</p>
 
-    <p>編集したファイル:</p><a href="file:///Z:/medialabo/practice/text-start.html"
+    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/text-start.html"
        target="_blank"> practice/text.start.html></a>
 
     <h4>練習1-5:ナビゲーションメニューの作成</h4>
@@ -49,7 +49,8 @@
     <p>...</p>
 
     <h2>第2回CSSによるWebページの装飾</h2>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-css/index(1).html"
+     target="_blank"> practice-css/index(1).html></a>
     <h2>第3回JavaScriptの基本</h2>
 
     <h2>第4回フォームとイベント処理</h2>
