--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
 
     <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
 
-    <p>編集したファイル:</p><a href="practice.index.html"></a>
+    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/practice.index.html"
+    target="_blank"> practice/practice.index.html></a>
 
     <h4>課題1-2:debug-example.htmlの修正</h4>
 
     <p>practice/debug-example.htmlを修正しました。また、HTMLバリデータなどを使用して、HTMLが整形式になったことを確認しました。</p>
 
-    <p>修正したファイル</p><a href="practice/debug-example.html"></a>
+    <p>修正したファイル</p><a href="https://g186742021.github.io/medialabo/practice/debug-example.html"
+    target="_blank"> practice/debug-example.html></a>
 
     <h4>課題1-3:index.htmlの作成</h4>
 
@@ -49,11 +51,49 @@
     <p>...</p>
 
     <h2>第2回CSSによるWebページの装飾</h2>
+
+    <h4>練習問題2-3:CSSの修正</h4>
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-css/index(1).html"
      target="_blank"> practice-css/index(1).html></a>
+
+     <h4>課題2-1:medialabo/index.htmlのCSSの作成</h4>
+
+     <h4>課題2-2:project.htmlCSSの作成</h4>
+
+     <h4>課題2-3:medialabo/index.htmlを編集</h4>
+
     <h2>第3回JavaScriptの基本</h2>
 
+    <h4>練習3-5: プログラムを書き足す</h4>
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-js/jsintro.html"
+    target="_blank"> practice-js/jsintro.html></a>
+    <h4>練習3-6: オブジェクトの参照</h4>
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-js/obj-practice.html"
+    target="_blank"> practice-js/obj-practice.html</a>
+    <h4>課題3-1: 数当てゲームの作成（その1）</h4>
+
+    <h4>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h4>
+
+    <h4>課題3-3: index.html を編集しよう</h4>
+
     <h2>第4回フォームとイベント処理</h2>
+
+    <h4>練習4-6: プログラムを組み込む</h4>
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/dom-demo.html"
+    target="_blank"> practice-dom/dom-demo.html</a>
+    <h4>練習4-7: 7大洋のリストを追加する</h4>
+
+    <h4>練習4-9: すべての h2 要素の背景色を変更する</h4>
+
+    <h4>練習4-11: プレースホルダーとしての div 要素と span 要素</h4>
+   
+    <h4>練習4-12: 写真表</h4>
+
+    <h2>課題4-1: 数当てゲームのページを改良する</h2>
+
+    <h4>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h4>
+
+    <h4>課題4-3: index.html を編集しよう</h4>
 
     <h2>第5回Webページの動作な編集</h2>
 
