--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
 
-    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/practice.index.html"
-    target="_blank"> practice/practice.index.html></a>
+    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/practice.html"
+    target="_blank"> practice/practice.html></a>
 
     <h4>課題1-2:debug-example.htmlの修正</h4>
 
@@ -96,6 +96,10 @@
     <h4>課題4-3: index.html を編集しよう</h4>
 
     <h2>第5回Webページの動作な編集</h2>
+
+    <h4>練習5-2: イベントハンドラの登録を確認する </h4>
+
+    <h4>練習5-3: イベントを選択する</h4>
 
     <h2>第6回Webページの作成演習</h2>
 
