--- a/practice/index.html
+++ b/practice/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <!-- put navigation menu just below here -->
+    <a href="practice/social.html">text-start.htmlへのリンク</a>
 
+    
     <h1>Homepage</h1>
 
     <p>Welcome to my exciting homepage</p>
