--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
 
     <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/practice.html"
-    target="_blank"> practice/practice.html></a>
+    target="_blank"> practice/practice.index.html></a>
 
     <h4>課題1-2:debug-example.htmlの修正</h4>
 
