--- a/practice/pictures.html
+++ b/practice/pictures.html
@@ -7,7 +7,8 @@
 
   <body>
     <!-- put navigation menu just below here -->
-<a href="social.html"title="social.htmlへのリンクへ"</a>
+<a href="social.html"title="social.htmlへのリンクへ"
+target="_blank"> Social media</a>
     <h1>Pictures</h1>
 
     <p>My pictures will go here, when I start taking some.</p>
