--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
 
-    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/practice.html"
-    target="_blank"> practice/practice.index.html></a>
+    <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/pictures.html"
+    target="_blank"> practice/index.html></a>
 
     <h4>課題1-2:debug-example.htmlの修正</h4>
 
