--- a/kazuate/kasuate.html
+++ b/kazuate/kasuate.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset=""utf-8>
-        <title>
-            数当てゲーム
-        </title>
-        ＜script scr="kazuate.js"defer＞</script>
-        
+        <meta charset="utf-8">
+        <title>数当てゲーム</title>
+    <script scr="kazuate.js" defer></script>
     </head>
+
+    <body>
+        <h1>数当てゲーム</h1>
+        <label for="kazuate">数当て: </label>
+        <input type="text" name="kazuate" size="10">
+        <button id="print">表示</button>
+        <p id="answer">予想：4</p>
+        <p id="result">第4回課題で結果を表示します。</p>
+      </body>
+    </body>
 </html>
