--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
 
-    <h4>課題1-4:...</h4>
+    <h4>課題1-4:データを選ぶ（プロジェクト課題）</h4>
 
-    <p>...</p>
+    <p>グルメ情報の Web アプリケーションを作ることに決定しました。</p>
+
+  <h4>課題1-5: Web アプリケーションのページテンプレート（プロジェクト課題）</h4>
+
+  <p></p>
 
     <h2>第2回CSSによるWebページの装飾</h2>
 
@@ -57,7 +61,9 @@
      target="_blank"> practice-css/index(1).html></a>
 
      <h4>課題2-1:medialabo/index.htmlのCSSの作成</h4>
-
+     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/index.html"
+     target="_blank"> index.html></a>
+    
      <h4>課題2-2:project.htmlCSSの作成</h4>
 
      <h4>課題2-3:medialabo/index.htmlを編集</h4>
