--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <h1>「Webコンテンツ作成」の成果</h1>
-    <link rel="stylesheet" href="style.css">
+   
   </head>
   <body>
     <h2>本学習の目的</h2>
@@ -45,6 +45,8 @@
     <h4>課題1-3:index.htmlの作成</h4>
 
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
+    <p>修正したファイル:</p><a href="https://g186742021.github.io/medialabo/index.html"
+    target="_blank"> index.html></a>
 
     <h4>課題1-4:データを選ぶ（プロジェクト課題）</h4>
 
