--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
     target="_blank"> index.html></a>
 
     <h4>課題1-4:データを選ぶ（プロジェクト課題）</h4>
-
+    <p>プロジェクト課題において、3種類のデータのうち、どのWebデータを作成するのかを決定します。</p>
     <p>グルメ情報の Web アプリケーションを作ることに決定しました。</p>
 
   <h4>課題1-5: Web アプリケーションのページテンプレート（プロジェクト課題）</h4>
-
-  <p></p>
+<ol>
+  <li>課題1-4を参考に検索結果のデータをいくつか具体的に想定する。</li>
+  <li>そのデータをページとして表示するようなHTMLファイルを作成する。</li>
+</ol>
+<p>各地の料理を表示させる。</p>
 
     <h2>第2回CSSによるWebページの装飾</h2>
 
@@ -68,7 +71,8 @@
      target="_blank"> index.html></a>
     
      <h4>課題2-2:project.htmlCSSの作成</h4>
-
+     <p>第1回の課題1-5で作ったproject.htmlのcssを作成しました。</p>
+   
      <h4>課題2-3:medialabo/index.htmlを編集</h4>
 
     <h2>第3回JavaScriptの基本</h2>
