--- a/index.html
+++ b/index.html
@@ -19,32 +19,24 @@
     <h2>毎回の講義で作成したページ</h2>
 
     <h3>第1回HTMLによるWebページの構造の記述</h3>
-
     <p>今回は次の....について学びました。また次の課題に取り組みました。</p>
 
     <h4>練習1-4:リスト</h4>
-
     <p>テキストだけで記述されたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構成を記述しました。ここで使用したのはp要素,hi要素,ul要素,olなどです。</p>
-
     <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/text-start.html"
        target="_blank"> practice/text.start.html></a>
 
     <h4>練習1-5:ナビゲーションメニューの作成</h4>
-
     <p>practiceフォルダの4つのファイルをナビゲーションにより接続しました。リンク設置にはol要素を使いました。</p>
-
     <p>編集したファイル:</p><a href="https://g186742021.github.io/medialabo/practice/pictures.html"
     target="_blank"> practice/index.html></a>
 
     <h4>課題1-2:debug-example.htmlの修正</h4>
-
     <p>practice/debug-example.htmlを修正しました。また、HTMLバリデータなどを使用して、HTMLが整形式になったことを確認しました。</p>
-
     <p>修正したファイル</p><a href="https://g186742021.github.io/medialabo/practice/debug-example.html"
     target="_blank"> practice/debug-example.html></a>
 
     <h4>課題1-3:index.htmlの作成</h4>
-
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
     <p>修正したファイル:</p><a href="https://g186742021.github.io/medialabo/index.html"
     target="_blank"> index.html></a>
@@ -67,8 +59,7 @@
      target="_blank"> practice-css/index(1).html></a>
 
      <h4>課題2-1:medialabo/index.htmlのCSSの作成</h4>
-     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/index.html"
-     target="_blank"> index.html></a>
+     <p>この課題では第1回の2-3で作成したmedialabo/index.htmlのcssを作成しました。</p>
     
      <h4>課題2-2:project.htmlCSSの作成</h4>
      <p>第1回の課題1-5で作ったproject.htmlのcssを作成しました。</p>
