--- a/kazuate/kasuate.html
+++ b/kazuate/kasuate.html
@@ -12,7 +12,7 @@
         <input type="text" name="kazuate" size="10">
         <button id="print">表示</button>
         <p id="answer">予想：4</p>
-        <p id="result">第4回課題で結果を表示します。</p>
+        <p ><span id="result"></span>第4回課題で結果を表示します。</p>
       </body>
     </body>
 </html>
