--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-js/obj-practice.html"
     target="_blank"> practice-js/obj-practice.html</a>
     <h4>課題3-1: 数当てゲームの作成（その1）</h4>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/kazuate/kazuate.html"
+    target="_blank"> kazuate/kazuate.html</a>
     <h4>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h4>
 
     <h4>課題3-3: index.html を編集しよう</h4>
