--- a/kazuate/kasuate.html
+++ b/kazuate/kasuate.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>数当てゲーム</title>
-    <script scr="kazuate.js" defer></script>
+        <script src="kazuate.js" defer></script>
     </head>
 
     <body>
         <h1>数当てゲーム</h1>
-        <label for="kazuate">数当て: </label>
-        <input type="text" name="kazuate" size="10">
-        <button id="print">表示</button>
-        <p id="answer">予想：4</p>
-        <p ><span id="result"></span>第4回課題で結果を表示します。</p>
+        <label for="seisu">数当て: </label>
+        <input type="text" name="seisu" id="seisu" size="5">
+        <button id="print">解答</button>
+        <p ><span id="kaisu"></span>回目の予想;<div id="seisu"></div>
+            <p id="result"></p>
       </body>
 </html>
