--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
     <h4>練習4-7: 7大洋のリストを追加する</h4>
 
     <h4>練習4-9: すべての h2 要素の背景色を変更する</h4>
-
+    
     <h4>練習4-11: プレースホルダーとしての div 要素と span 要素</h4>
-   
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-span-demo-demo.html"
+    target="_blank"> practice-dom/div-span-demo.html</a>
     <h4>練習4-12: 写真表</h4>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-demo2.html"
+    target="_blank"> practice-dom/div-demo2.html</a>
     <h4>課題4-1: 数当てゲームのページを改良する</h4>
 
     <h4>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h4>
