--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-js/obj-practice.html"
     target="_blank"> practice-js/obj-practice.html</a>
     <h4>課題3-1: 数当てゲームの作成（その1）</h4>
-    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/kazuate/kazuate.html"
-    target="_blank"> kazuate/kazuate.html</a>
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/kazuate/kasuate.html"
+    target="_blank"> kazuate/kasuate.html</a>
     <h4>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h4>
 
     <h4>課題3-3: index.html を編集しよう</h4>
@@ -84,17 +84,17 @@
     <h2>第4回フォームとイベント処理</h2>
 
     <h4>練習4-6: プログラムを組み込む</h4>
-    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/dom-demo.html"
+      <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/dom-demo.html"
     target="_blank"> practice-dom/dom-demo.html</a>
     <h4>練習4-7: 7大洋のリストを追加する</h4>
-
+      <p>ここでは練習4-6、htmlファイルに7つの大洋を追加しました。</p>
     <h4>練習4-9: すべての h2 要素の背景色を変更する</h4>
-    
+      <p>練習4-6で作成したhtmlファイルの背景色を変更しました。</p>
     <h4>練習4-11: プレースホルダーとしての div 要素と span 要素</h4>
-    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-span-demo-demo.html"
-    target="_blank"> practice-dom/div-span-demo.html</a>
+      <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-span-demo1.html"
+    target="_blank"> practice-dom/div-span-demo1.html</a>
     <h4>練習4-12: 写真表</h4>
-    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-demo2.html"
+      <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-demo2.html"
     target="_blank"> practice-dom/div-demo2.html</a>
     <h4>課題4-1: 数当てゲームのページを改良する</h4>
 
@@ -105,9 +105,11 @@
     <h2>第5回Webページの動作な編集</h2>
 
     <h4>練習5-2: イベントハンドラの登録を確認する </h4>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-intro.html"
+    target="_blank"> practice-event/event-intro.html</a>
     <h4>練習5-3: イベントを選択する</h4>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-list.html"
+    target="_blank"> practice-event/event-list.html</a>
     <h2>第6回Webページの作成演習</h2>
 
 
