--- a/kazuate/kasuate.html
+++ b/kazuate/kasuate.html
@@ -11,7 +11,7 @@
         <label for="seisu">数当て: </label>
         <input type="text" name="seisu" id="seisu" size="5">
         <button id="print">解答</button>
-        <p ><span id="kaisu"></span>回目の予想;<div id="seisu"></div>
+        <p ><span id="kaisu"></span>回目の予想;<div id="seisu"></div></p>
             <p id="result"></p>
       </body>
 </html>
