--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <h4>課題1-4:データを選ぶ（プロジェクト課題）</h4>
     <p>プロジェクト課題において、3種類のデータのうち、どのWebデータを作成するのかを決定します。</p>
-    <p>グルメ情報の Web アプリケーションを作ることに決定しました。</p>
+    <p>世界の天気の Web アプリケーションを作ることに決定しました。</p>
 
   <h4>課題1-5: Web アプリケーションのページテンプレート（プロジェクト課題）</h4>
 <ol>
