--- a/project.html
+++ b/project.html
@@ -8,8 +8,21 @@
   <body>
     <!-- put navigation menu just below here -->
 
-    <h1>My projects</h1>
+    <h1> 世界の天気</h1>
+    <h3>カイロ(エジプト)</h3>
+    <p>晴れ・気温30度・降水確率0%</p>
+    <h3>モスクワ(ロシア)</h3>
+    <p>雲り・気温28度・降水確率54%</p>
+    <h3>ヨハネスブルク(南アフリカ)</h3>
+    <p>晴れ・気温15度・降水確率0%</p>
+    <h3>北京(中国)</h3>
+    <p>雨・気温27度・降水確率80%</p>
+    <h3>東京(日本)</h3>
+    <p>晴れ・気温31度・降水確率10%</p>
+    <h3>シンガポール</h3>
+    <p>雨・気温33度・降水確率82%</p>
+    <h3>シドニー(オーストラリア)</h3>
+    <p>曇り・気温16度・降水確率1%</p>
 
-    <p>Welcome to my project page, showing what exciting things I am currently doing.</p>
   </body>
 </html>
