--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<div>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -8,12 +8,16 @@
   </head>
   <body>
     <h2>本学習の目的</h2>
-
-    <p>ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。</p>
+<p>HTMLによってWebページの構造を記述できる基本を学び、CSSによってWebページの見た目
+  を設定する基本を学び、JavaScriptの構分リファレンスか構文の書式や使用方法の基本動作を学ぶ。</p>
+</p>
     <h2>プロジェクト課題について</h2>
-
-    <p>プロジェクト課題では...を実施する。ここで表示するデータは...</p>
-
+<p>
+  プロジェクト課題では世界各地の天気を表示するように実施する。ここで表示するデータは天気、気温、最高気温
+  である。HTML、CSS、JavaScriptを全6回の授業で学んできたことを反映し、検索機能はしっかり機能するのか
+  、CSSにより見やすく作成するように心がける。また、検索したものに対して正確に検索結果が表示されるのか丁寧に
+  仕上げ、余計な情報は使わず、見る人が必要最低限の情報を得られるようなプロジェクト課題を完成させる。
+</p>
     <p>プロジェクト課題で作成したページ：</p><a href="project.html"></a>
 
     <h2>毎回の講義で作成したページ</h2>
@@ -97,21 +101,38 @@
       <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-dom/div-demo2.html"
     target="_blank"> practice-dom/div-demo2.html</a>
     <h4>課題4-1: 数当てゲームのページを改良する</h4>
-
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/kazuate/kasuate.html"
+    target="_blank"> kazuate/kasuate.html</a>
     <h4>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h4>
 
     <h4>課題4-3: index.html を編集しよう</h4>
 
     <h2>第5回Webページの動作な編集</h2>
-
     <h4>練習5-2: イベントハンドラの登録を確認する </h4>
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-intro.html"
     target="_blank"> practice-event/event-intro.html</a>
     <h4>練習5-3: イベントを選択する</h4>
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-list.html"
     target="_blank"> practice-event/event-list.html</a>
+    <h4>課題5-1:数当てゲームの完成</h4>
+    
     <h2>第6回Webページの作成演習</h2>
 
-
-  </body>
+    <h2>工夫点，苦心点，強調点，感想</h2>
+<p class="target">全6回という少ない授業数の中でHTML、CSS、JavaScriptについてたくさん学ぶことがありました。身近に使っていたサイトなどにもHTML、CSS、JavaScript　
+  などが使用されていて、簡単に作成されているものではないことが授業を通して身に沁みて感じました。いろいろなサイトを見るたびに、このサイトを作るにはどのような
+  手間暇かかっているのか考えてしまいます。インターネット上にはたくさんの情報があり、デザインなどもたくさん学ぶことがあると思います。その情報をしっかり使いこなす
+  ことができるまでしっかり勉強していきたいと思いました。まだ自分自身が就職した分野は明確ではないですが、Web業界も一つの視野に入りました。インターネットの普及が
+  広がっている中でとても将来性のある業界だと思います。
+  工夫点としては無駄な色、情報を載せることをしないようにしました。色をたくさん使うのではなく、単一な色だけを使う事によりシンプルなWebページが完成すると思います。
+  苦心点は毎回の授業で感じました。完成したと思い、いざ実行してみると間違えがあり、うまく実行されず修正がずっと続いていました。特に一番苦戦したのは数当てです。
+  何度も実行しても何も反応しないのがずっと続いていました。しかしよく見るとスペルが一文字だけ間違っているなどのミスでした。ミスを繰り返すことで次にその
+  間違えはしないように心がけることがしっかりできたので回数を重ねるうちにミスも減っていきました。また、プロジェクト課題も初めに何から取り組めば良いのかなどの作成
+  にとても苦戦しました。ある程度の完成作品を想定しから取り組まないといけないと思いました。他の授業でプログラミングのjavaを学んでいたのでJavaScriptを作成する時、
+  どちらも似ている部分があり、混同してしまうことも多かったです。for文の書き方演算子の使い方も少し異なっていて違いを頭の中で明確化させるのに必死でした。
+  今回学んだHTML、CSS、JavaScriptはまだまだ学ばなければならないことがたくさんあります。自分はとてもプログラミングsに興味があるのでいろいろな言語を
+  学んで使いこなせるようになりたいです。ある程度の基本動作を学ぶことができたので自分でサイトを作成してみたしてみたいと思いました。完成するまではとても大変だけれど
+  完成した時の達成感はとても楽しかったです。
+</p>
+</body>
 </html>
