--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>毎回の講義で作成したページ</h2>
 
     <h3>第1回HTMLによるWebページの構造の記述</h3>
-    <p>今回は次の....について学びました。また次の課題に取り組みました。</p>
+    <p>今回は次のHTMLについて学びました。また次の課題に取り組みました。</p>
 
     <h4>練習1-4:リスト</h4>
     <p>テキストだけで記述されたレシピのHTMLを編集しました。見出しやリストなどの要素により文書の構成を記述しました。ここで使用したのはp要素,hi要素,ul要素,olなどです。</p>
@@ -69,7 +69,7 @@
      <p>第1回の課題1-5で作ったproject.htmlのcssを作成しました。</p>
    
      <h4>課題2-3:medialabo/index.htmlを編集</h4>
-
+     <p>課題1-3で作成したindex.htmlファイルを編集しました。</p>
     <h2>第3回JavaScriptの基本</h2>
 
     <h4>練習3-5: プログラムを書き足す</h4>
@@ -84,7 +84,7 @@
     <h4>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h4>
 
     <h4>課題3-3: index.html を編集しよう</h4>
-
+    <p>課題1-3で作成したindex.htmlファイルを編集しました。</p>
     <h2>第4回フォームとイベント処理</h2>
 
     <h4>練習4-6: プログラムを組み込む</h4>
@@ -106,7 +106,7 @@
     <h4>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h4>
 
     <h4>課題4-3: index.html を編集しよう</h4>
-
+    <p>課題1-3で作成したindex.htmlファイルを編集しました。</p>
     <h2>第5回Webページの動作な編集</h2>
     <h4>練習5-2: イベントハンドラの登録を確認する </h4>
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-intro.html"
@@ -115,7 +115,8 @@
     <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/practice-event/event-list.html"
     target="_blank"> practice-event/event-list.html</a>
     <h4>課題5-1:数当てゲームの完成</h4>
-    
+    <p>編集したファイル:</p><a href="http://g186742021.github.io/medialabo/kazuate/kasuate.html"
+    target="_blank"> kazuate/kasuate.html</a>
     <h2>第6回Webページの作成演習</h2>
 
     <h2>工夫点，苦心点，強調点，感想</h2>
