--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   、CSSにより見やすく作成するように心がける。また、検索したものに対して正確に検索結果が表示されるのか丁寧に
   仕上げ、余計な情報は使わず、見る人が必要最低限の情報を得られるようなプロジェクト課題を完成させる。
 </p>
-    <p>プロジェクト課題で作成したページ：</p><a href="project.html"></a>
+    <p>プロジェクト課題で作成したページ:</p><a href="https://g186742021.github.io/medialabo/project.html"
+       target="_blank"> project.html></a>
 
     <h2>毎回の講義で作成したページ</h2>
 
