--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   仕上げ、余計な情報は使わず、見る人が必要最低限の情報を得られるようなプロジェクト課題を完成させる。
 </p>
     <p>プロジェクト課題で作成したページ:</p><a href="https://g186742021.github.io/medialabo/project.html"
-       target="_blank"> project.html></a>
+       target="_blank"> project.html</a>
 
     <h2>毎回の講義で作成したページ</h2>
 
@@ -44,7 +44,7 @@
     <h4>課題1-3:index.htmlの作成</h4>
     <p>index.htmlはこのページのHTMLファイルです。この課題ではindex.htmlのテンプレートを作成しました。</p>
     <p>修正したファイル:</p><a href="https://g186742021.github.io/medialabo/index.html"
-    target="_blank"> index.html></a>
+    target="_blank"> index.html</a>
 
     <h4>課題1-4:データを選ぶ（プロジェクト課題）</h4>
     <p>プロジェクト課題において、3種類のデータのうち、どのWebデータを作成するのかを決定します。</p>
